# cheesecloth

./: Cargo.toml  README.md  pyproject.toml
docs/: IMPLEMENTED_METRICS.md
examples/: 5_get_all_metrics_example.py
python/cheesecloth/: __init__.py  __init__.pyi  cli.py  tokenized_metrics.py
python/tests/: test_all_char_metrics.py  test_frequency_benchmarks.py  test_unicode_category_bigrams.py  test_unicode_category_trigrams.py  test_unicode_category_trigrams_benchmark.py  test_unigram.py
src/: lib.rs
src/char/: categories.rs  unicode.rs
